dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(sysfs-poll, 0.0.3)
AC_PROG_CC

AC_CANONICAL_SYSTEM

dnl Initialize automake
AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror -Wno-portability])
AM_SILENT_RULES([yes])

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
